# rust-migration-manager

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/database/: column.rs  db_enum.rs  extension.rs  mod.rs  schema.rs  table.rs  utils.rs
src/error/: mod.rs
src/file_manager/: mod.rs
src/postgres_schema/: mod.rs
src/sql/: column.rs  db.rs  db_enum.rs  mod.rs  schema.rs  table.rs  utils.rs
src/tables/: enums.rs  mod.rs  schema.rs  user.rs
