[package]
name = "cli-tooling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["unstable-doc"] }
dotenv = "0.15.0"
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["completion", "fuzzy-select"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "time",
  "migrate",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.18"
